--- a/htm/login.html
+++ b/htm/login.html
@@ -23,10 +23,10 @@
             <form action="" method="get">
                 <h2 class="tituloRegistro">Iniciar Sesión</h2>
                 <div>
-                    <input type="email" placeholder="Email" id="email" name="email">
+                    <input type="email" placeholder="Email" id="email" name="email" required>
                 </div>
                 <div>
-                    <input type="password" placeholder="Contraseña" id="password" name="password">
+                    <input type="password" placeholder="Contraseña" id="password" name="password" required>
                 </div>
                 <div>
                     <input class="boton" type="submit" value="Iniciar Sesión">
@@ -41,6 +41,9 @@
     <script>
         AOS.init();
     </script>
+    <script src="../js/validacion.js"></script>
+
+
 
 </body>
 
