--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li class="lItem"><a class="liNav" href="#tendencias">Tendencias</a></li>
                 <li class="lItem"><a class="liNav" href="htm/registro.html">Registrarse</a></li>
                 <li class="lItem"><a class="liNav iniSesion" href="htm/login.html">Iniciar Sesión</a></li>
+                <li class="lItem"><a class="liNav iniSesion" href="cargarApi.html">Conexion API</a></li>
             </ul>
         </nav>
     </header>
