--- a/cargarApi.html
+++ b/cargarApi.html
@@ -37,8 +37,8 @@
 
         <section data-aos="fade-up" data-aos-offset="400" data-aos-delay="300" data-aos-duration="1000"
             class="section-trends" id="trends">
-            <h3>Peliculas Populares</h3>
-            <div class="movies-container" id="btnContenedor">
+            <h3 class="titulo-pelis">Peliculas Populares</h3>
+            <div class="movies-container" id="contenedor">
 
             </div>
             <div class="btn-container">
@@ -58,7 +58,7 @@
         AOS.init();
     </script>
 
-    <script src="/js/cargarApi.js"></script>
+    <script src="js/cargarApi.js"></script>
 
 </body>
 
